update docs, options

--- a/.verbrc.md
+++ b/.verbrc.md
@@ -33,13 +33,13 @@ Returns an object that looks something like:
 
 ## Examples
 
-### options.renameFn
+### options.rename
 
 Pass a rename function to be used as the key of each file object:
 
 ```js
 var files = mapFiles('lib/*.txt', {
-  renameFn: function (filepath) {
+  rename: function (filepath) {
     return path.basename(filepath);
   }
 });
@@ -54,7 +54,7 @@ Returns something like:
 ```
 
 
-### options.parseFn
+### options.parse
 
 Pass a parsing function to change the object returned for each file. The
 default function reads files and returns a string. This example shows how
@@ -62,7 +62,7 @@ you might instead `require` each file.
 
 ```js
 var files = mapFiles('lib/*.txt', {
-  parseFn: function (filepath) {
+  parse: function (filepath) {
     return {
       path: filepath,
       fn: require(path.resolve(filepath))
