--- a/.verbrc.md
+++ b/.verbrc.md
@@ -1,6 +1,3 @@
----
-tags: ['verb-tag-jscomments']
----
 # {%= name %} {%= badge("fury") %}
 
 > {%= description %}
@@ -17,66 +14,52 @@ npm test
 ## Usage
 
 ```js
-var mapFiles = require('{%= name %}');
-console.log(mapFiles('lib/*.txt'));
+var files = require('{%= name %}');
+console.log(files('templates/*.txt'));
 ```
 Returns an object that looks something like:
 
 ```js
-{ 'fixtures/a.txt': { name: 'a.txt' , contents: 'This is file a.txt.' },
-  'fixtures/b.txt': { name: 'b.txt' , contents: 'This is file b.txt.' },
-  'fixtures/c.txt': { name: 'c.txt' , contents: 'This is file c.txt.' } }
+{ a: { content: 'AAA', path: 'templates/a.txt' },
+  b: { content: 'BBB', path: 'templates/b.txt' },
+  c: { content: 'CCC', path: 'templates/c.txt' }}
 ```
-
-## API
-{%= jscomments("index.js") %}
-
-## Examples
 
 ### options.rename
 
-Pass a rename function to be used as the key of each file object:
+Rename the key of each file object:
 
 ```js
-var files = mapFiles('lib/*.txt', {
+var templates = files('templates/*.txt', {
   rename: function (filepath) {
     return path.basename(filepath);
   }
 });
-console.log(files);
 ```
 Returns something like:
 
 ```js
-{ 'fixtures/a.txt': { name: 'a' , contents: 'This is file a.txt.' },
-  'fixtures/b.txt': { name: 'b' , contents: 'This is file b.txt.' },
-  'fixtures/c.txt': { name: 'c' , contents: 'This is file c.txt.' } }
+{ 'templates/a.txt': { content: 'AAA', path: 'templates/a.txt' },
+  'templates/b.txt': { content: 'BBB', path: 'templates/b.txt' },
+  'templates/c.txt': { content: 'CCC', path: 'templates/c.txt' }}
 ```
 
 
-### options.parse
+### options.read
 
-Pass a parsing function to change the object returned for each file. The
-default function reads files and returns a string. This example shows how
-you might instead `require` each file.
+> Pass a custom `read` function to change the object returned for each file.
+
+
+The default function reads files and returns a string, but you can do anything
+you want with the function, like `require` files:
 
 ```js
-var files = mapFiles('lib/*.txt', {
-  parse: function (filepath) {
-    return {
-      path: filepath,
-      fn: require(path.resolve(filepath))
-    }
+var helpers = files('helpers/*.js', {
+  read: function (fp) {
+    return require(path.resolve(fp));
   }
 });
-console.log(files);
-```
-Returns something like:
-
-```js
-{ 'fixtures/a.js': { path: 'fixtures/a.js' , fn: { foo: [Function: foo] } },
-  'fixtures/b.js': { path: 'fixtures/b.js' , fn: { bar: [Function: bar] } },
-  'fixtures/c.js': { path: 'fixtures/c.js' , fn: { baz: [Function: baz] } } }
+//=> { a: [Function: foo], b: [Function: bar], c: [Function: baz] }
 ```
 
 
