clean up readme, run verb

--- a/.verbrc.md
+++ b/.verbrc.md
@@ -25,13 +25,13 @@ Returns an object that looks something like:
   c: { content: 'CCC', path: 'templates/c.txt' }}
 ```
 
-### options.rename
+### options.name
 
 Rename the key of each file object:
 
 ```js
 var templates = files('templates/*.txt', {
-  rename: function (filepath) {
+  name: function (filepath) {
     return path.basename(filepath);
   }
 });
@@ -39,9 +39,9 @@ var templates = files('templates/*.txt', {
 Returns something like:
 
 ```js
-{ 'templates/a.txt': { content: 'AAA', path: 'templates/a.txt' },
-  'templates/b.txt': { content: 'BBB', path: 'templates/b.txt' },
-  'templates/c.txt': { content: 'CCC', path: 'templates/c.txt' }}
+{ 'a.txt': { content: 'AAA', path: 'templates/a.txt' },
+  'b.txt': { content: 'BBB', path: 'templates/b.txt' },
+  'c.txt': { content: 'CCC', path: 'templates/c.txt' }}
 ```
 
 
