--- a/.verb.md
+++ b/.verb.md
@@ -25,6 +25,14 @@ Returns an object that looks something like:
   c: { content: 'CCC', path: 'templates/c.txt' }}
 ```
 
+### options.cwd
+
+Define the current working directory
+
+```js
+files('*.txt', {cwd: 'templates'});
+```
+
 ### options.name
 
 Rename the key of each file object:
