--- a/.verb.md
+++ b/.verb.md
@@ -2,14 +2,10 @@
 
 > {%= description %}
 
-## Install
-{%= include("install") %}
+{%= include("install-npm", {save: true}) %}
 
-## Run tests
-
-```bash
-npm test
-```
+## Running tests
+{%= include("tests") %}
 
 ## Usage
 
@@ -75,7 +71,7 @@ var helpers = files('helpers/*.js', {
 {%= include("author") %}
 
 ## License
-{%= copyright() %}
+{%= copyright({start: 2014}) %}
 {%= license() %}
 
 ***
