update tests, docs

--- a/.verb.md
+++ b/.verb.md
@@ -1,6 +1,8 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
+
+As of v0.5.0, map-files returns absolute file paths by default. You can achieve the same results by using a custom `name` function as in the [examples](#options-name).
 
 {%= include("install-npm", {save: true}) %}
 
