--- a/.verb.md
+++ b/.verb.md
@@ -23,15 +23,33 @@ Returns an object that looks something like:
   c: { content: 'CCC', path: 'templates/c.txt' }}
 ```
 
+### options.cache
+
+Type: `Boolean`
+
+Default: `false`
+
+If `true`, results will be cached in memory so that subsequent lookups for the same cwd and patterns don't repeatedly hit the file system.
+
+
 ### options.cwd
 
-Define the current working directory
+Type: `String`
+
+Default: `process.cwd()`
+
+
+Specify the current working directory
 
 ```js
 files('*.txt', {cwd: 'templates'});
 ```
 
 ### options.name
+
+Type: `Function`
+
+Default: `path.basename(fp, path.extname(fp))`
 
 Rename the key of each file object:
 
@@ -55,6 +73,9 @@ Returns something like:
 
 > Pass a custom `read` function to change the object returned for each file.
 
+Type: `Function`
+
+Default: `fs.readFileSync()`
 
 The default function reads files and returns a string, but you can do anything
 you want with the function, like `require` files:
