--- a/.verb.md
+++ b/.verb.md
@@ -6,9 +6,6 @@ As of v0.5.0, map-files returns absolute file paths by default. You can achieve 
 
 {%= include("install-npm", {save: true}) %}
 
-## Running tests
-{%= include("tests") %}
-
 ## Usage
 
 ```js
@@ -89,6 +86,14 @@ var helpers = files('helpers/*.js', {
 //=> { a: [Function: foo], b: [Function: bar], c: [Function: baz] }
 ```
 
+## Other files libs
+{%= related(['file-reader', 'filter-files', 'micromatch', 'export-files']) %}
+
+## Running tests
+{%= include("tests") %}
+
+## Contributing
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
