run update, lint

--- a/.verb.md
+++ b/.verb.md
@@ -4,6 +4,8 @@
 
 As of v0.5.0, map-files returns absolute file paths by default. You can achieve the same results by using a custom `name` function as in the [examples](#options-name).
 
+## Install
+
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -87,7 +89,7 @@ var helpers = files('helpers/*.js', {
 ```
 
 ## Other files libs
-{%= related(['file-reader', 'filter-files', 'micromatch', 'export-files']) %}
+{%= related(verb.related.list) %}
 
 ## Running tests
 {%= include("tests") %}
@@ -100,7 +102,7 @@ var helpers = files('helpers/*.js', {
 
 ## License
 {%= copyright({start: 2014}) %}
-{%= license() %}
+{%= license %}
 
 ***
 
