--- a/.verb.md
+++ b/.verb.md
@@ -1,111 +1,98 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
+**Heads up!**
 
-> {%= description %}
-
-As of v0.5.0, map-files returns absolute file paths by default. You can achieve the same results by using a custom `name` function as in the [examples](#options-name).
-
-## Install
-
-{%= include("install-npm", {save: true}) %}
+Breaking changes in v0.8.0. See [the history](#history) for details.
 
 ## Usage
 
 ```js
-var files = require('{%= name %}');
-console.log(files('templates/*.txt'));
+var mapFiles = require('{%= name %}');
+console.log(mapFiles('templates/*.txt'));
 ```
-Returns an object that looks something like:
+
+Returns an object of [vinyl][] files that looks something like this:
 
 ```js
-{ a: { content: 'AAA', path: 'templates/a.txt' },
-  b: { content: 'BBB', path: 'templates/b.txt' },
-  c: { content: 'CCC', path: 'templates/c.txt' }}
+{ 'test/fixtures/a.txt': <File "test/fixtures/a.txt" <Buffer 41 41 41>>,
+  'test/fixtures/b.txt': <File "test/fixtures/b.txt" <Buffer 42 42 42>>,
+  'test/fixtures/c.txt': <File "test/fixtures/c.txt" <Buffer 43 43 43>> }
 ```
 
-### options.cache
-
-Type: `Boolean`
-
-Default: `false`
-
-If `true`, results will be cached in memory so that subsequent lookups for the same cwd and patterns don't repeatedly hit the file system.
-
+## Options
 
 ### options.cwd
+
+Specify the current working directory
+
+**Params**
 
 Type: `String`
 
 Default: `process.cwd()`
 
-
-Specify the current working directory
+**Example**
 
 ```js
 files('*.txt', {cwd: 'templates'});
 ```
 
-### options.name
-
-Type: `Function`
-
-Default: `path.basename(fp, path.extname(fp))`
+### options.renameKey
 
 Rename the key of each file object:
 
+**Params**
+
+Type: `Function`
+
+Default: `file.relative`
+
+
+**Example**
+
 ```js
-var templates = files('templates/*.txt', {
-  name: function (filepath) {
-    return path.basename(filepath);
+var files = mapFiles('templates/*.txt', {
+  renameKey: function (file) {
+    return file.basename;
   }
 });
 ```
 Returns something like:
 
 ```js
-{ 'a.txt': { content: 'AAA', path: 'templates/a.txt' },
-  'b.txt': { content: 'BBB', path: 'templates/b.txt' },
-  'c.txt': { content: 'CCC', path: 'templates/c.txt' }}
+{ 'a.txt': <File "test/fixtures/a.txt" <Buffer 41 41 41>>,
+  'b.txt': <File "test/fixtures/b.txt" <Buffer 42 42 42>>,
+  'c.txt': <File "test/fixtures/c.txt" <Buffer 43 43 43>> }
 ```
 
 
-### options.read
+### options.decorate
 
-> Pass a custom `read` function to change the object returned for each file.
-
-Type: `Function`
-
-Default: `fs.readFileSync()`
-
-The default function reads files and returns a string, but you can do anything
-you want with the function, like `require` files:
+Pass an object of methods to decorate as getters onto each file in the results. 
 
 ```js
-var helpers = files('helpers/*.js', {
-  read: function (fp) {
-    return require(path.resolve(fp));
+var yaml = require('js-yaml');
+
+var files = mapFiles('test/fixtures/*.yml', {
+  renameKey: 'stem',
+  decorate: {
+    yaml: function(file) {
+      return yaml.safeLoad(file.contents.toString());
+    }
   }
 });
-//=> { a: [Function: foo], b: [Function: bar], c: [Function: baz] }
+
+console.log(files.a.yaml);
+//=> {title: 'AAA'}
 ```
 
-## Other files libs
-{%= related(verb.related.list) %}
+## History
 
-## Running tests
-{%= include("tests") %}
+**v0.8.0**
 
-## Contributing
-{%= include("contributing") %}
+- `options.name` was removed, use `options.renameKey` instead.
+- `options.cache` was removed
+- `options.read` was removed
+- `options.decorate` was added. See the [decorate docs](#options.decorate).
 
-## Author
-{%= include("author") %}
+**v0.5.0**
 
-## License
-{%= copyright({start: 2014}) %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
-
-[globby]: https://github.com/sindresorhus/globby
+As of v0.5.0, map-files returns absolute file paths by default. You can achieve the same results by using a custom `name` function as in the [examples](#options-name).
